# devops-agent-msk-mcp

./: .gitignore  Dockerfile  README.md  pyproject.toml
config/: clusters.yaml.example
scripts/: build_image.sh  deploy_fargate.sh  run_local.sh
src/msk_mcp/: __main__.py  cli_executor.py  client_properties.py  concurrency.py  config.py  errors.py  kafka_clients.py  logging_setup.py  server.py
src/msk_mcp/http/: health.py
src/msk_mcp/tools/: compute_offset_reset_plan.py  describe_acls.py  describe_cluster.py  describe_consumer_group.py  describe_log_dirs.py  describe_partition_reassignments.py  describe_topic.py  describe_topic_configs.py  describe_under_replicated_partitions.py  get_offsets_for_times.py  list_consumer_groups.py  test_broker_connectivity.py
tests/: conftest.py
tests/integration/: test_e2e_admin_client.py  test_e2e_cli_tool.py
tests/tools/: test_compute_offset_reset_plan.py  test_describe_acls.py  test_describe_cluster.py  test_describe_consumer_group.py  test_describe_log_dirs.py  test_describe_partition_reassignments.py  test_describe_topic.py  test_describe_topic_configs.py  test_describe_under_replicated_partitions.py  test_get_offsets_for_times.py  test_list_consumer_groups.py  test_test_broker_connectivity.py
tests/unit/: test_cli_executor.py  test_client_properties.py  test_concurrency.py  test_config.py  test_errors.py  test_kafka_clients.py  test_logging.py
