[project]
name = "msk-mcp"
version = "0.1.0"
description = "Read-only MCP server exposing Amazon MSK debugging primitives to AWS DevOps Agent."
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.2",
    "confluent-kafka>=2.5",
    "aws-msk-iam-sasl-signer-python>=1.0",
    "boto3>=1.34",
    "pydantic>=2.6",
    "pyyaml>=6",
    "structlog>=24",
    "starlette>=0.37",
    "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.5",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/msk_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]
ignore = [
    "ASYNC109",  # `timeout` parameter is conventional for our tool/executor APIs
    "UP042",     # str-Enum mix is intentional (JSON-friendly value access)
]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
